// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page: Wallets renders correctly 1`] = `
<Layout
  activeItem="/wallets"
  passwordRequired={true}
>
  <h1
    className="MuiTypography-root MuiTypography-h1 MuiTypography-gutterBottom"
  >
    common:wallet manage
  </h1>
  <div
    className="MuiBox-root MuiBox-root-1"
  >
    <div
      className="MuiBox-root MuiBox-root-2"
    >
      <h4
        className="MuiTypography-root MuiTypography-h4"
      >
        test
      </h4>
      <WalletMenuButton
        walletId="123"
      />
    </div>
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6 MuiGrid-grid-xl-4"
      >
        <AccountCard
          account={
            Object {
              "address": "address",
              "createdAt": 0,
              "crypto": "ATOM",
              "fav": false,
              "index": 0,
              "name": "name",
              "walletId": "123",
            }
          }
        />
      </div>
    </div>
  </div>
</Layout>
`;

exports[`page: Wallets renders correctly with missing wallet id 1`] = `
<Layout
  activeItem="/wallets"
  passwordRequired={true}
>
  <h1
    className="MuiTypography-root MuiTypography-h1 MuiTypography-gutterBottom"
  >
    common:wallet manage
  </h1>
  <div
    className="MuiBox-root MuiBox-root-3"
  >
    <div
      className="MuiBox-root MuiBox-root-4"
    >
      <h4
        className="MuiTypography-root MuiTypography-h4"
      >
        test
      </h4>
      <WalletMenuButton
        walletId="123"
      />
    </div>
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    />
  </div>
</Layout>
`;
